--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_API_BASE_URL=http://192.168.0.210:3000
-VITE_API_DEPLOY_URL=http://192.168.0.95:5000
+VITE_API_BASE_URL=http://192.168.0.210
+VITE_API_PORT_DATATIME=3001
+VITE_API_PORT_PRODUCTIVITY=3002
