--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "animejs": "^3.2.2",
     "axios": "^1.6.5",
+    "file-saver": "^2.0.5",
     "lightweight-charts": "^4.1.2",
     "react": "^18.2.0",
     "react-datepicker": "^6.2.0",
